namespace and document list through foliadocserve

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
+- Get filelist via server
 - Fix concurrency
-- Annotationtype correction should have no effect on editor
 - Multiple corrections on text goes wrong?
 - 2nd order corrections
 - Adding namespaces
