--- a/docs/Annotation_guidelines_2014.tex
+++ b/docs/Annotation_guidelines_2014.tex
@@ -262,6 +262,19 @@ next one.
 \item Repeat from step 3 or 4.
 \end{enumerate}
 
+\subsection{Undoing corrections}
+
+FLAT offers the possibility to correct any of the previously made
+annotations, by allowing the user to revert to an older version of the
+annotated document, discarding all edits made after that version. Via
+the menu 'Tools \& Options' you can select 'History \& Undo', which
+displays in an overlay window all changes made to the
+document. Clicking on 'Revert to this version' brings the document
+back to that version.
+
+It is also possible to 'undo an undo' as all reverting operations are
+listed in the history of the document.
+
 %If there are questions about the type of annotation, mark the
 %occurrence with a ``[Unsure]''-tag. Depending on how often you
 %applied the tag, plan a session with me where we go through all the
