--- a/docs/flat_clst_demo_pres.tex
+++ b/docs/flat_clst_demo_pres.tex
@@ -95,10 +95,11 @@
 \end{frame}
 
 \begin{frame}{In the field}
-  \begin{block}{Currently used in two projects}
+  \begin{block}{Currently used in two projects:}
     \begin{enumerate}
       \item A project with \emph{College van Examens}: Spelling correction on
-        texts of children and on automatic corrections by Valkuil.net . 
+        texts of children and on automatic corrections by Valkuil.net,
+        annotated by four student assistants. 
       \item A project concerning the annotation of named entities, specifically
         locations, in historical texts from World War II, with \emph{Susan Evans},
         \emph{Marten Düring} and \emph{Antal van den Bosch}
